--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,7 +9,8 @@
     <FrameLayout
         android:id="@+id/my_framelayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fragment">
 
     </FrameLayout>
 
@@ -21,8 +22,9 @@
     <fragment
         android:id="@+id/fragment"
         android:tag="myfirstfragment"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:name="linlin.com.fragmentdemo.My_Fragment"/>
 
-</LinearLayout>
+</RelativeLayout>
