--- a/app/src/main/res/layout/myfragment.xml
+++ b/app/src/main/res/layout/myfragment.xml
@@ -11,4 +11,11 @@
         android:text="这是一个fragment"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/mybutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="START"/>
 </LinearLayout>
