--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context="linlin.com.fragmentdemo.MainActivity">
 
+    <TextView
+        android:id="@+id/mytextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <FrameLayout
         android:id="@+id/my_framelayout"
         android:layout_width="match_parent"
